   account. When set in the general context, it will act as the default
   setting for defined accounts.

AGI (Asterisk Gateway Interface)
------------------
 * The manager event AGIExec has been split into AGIExecStart and AGIExecEnd.

 * The manager event AsyncAGI has been split into AsyncAGIStart, AsyncAGIExec,
   and AsyncAGIEnd.

CDR (Call Detail Records)
------------------
 * Significant changes have been made to the behavior of CDRs. For a full
   definition of CDR behavior in Asterisk 12, please read the specification
   on the Asterisk wiki (wiki.asterisk.org).

 * CDRs will now be created between all participants in a bridge. For each
   pair of channels in a bridge, a CDR is created to represent the path of
   communication between those two endpoints. This lets an end user choose who
   to bill for what during bridge operations with multiple parties.

 * The duration, billsec, start, answer, and end times now reflect the times
   associated with the current CDR for the channel, as opposed to a cumulative
   measurement of all CDRs for that channel.

 * When a CDR is dispatched, user defined CDR variables from both parties are
   included in the resulting CDR. If both parties have the same variable, only
   the Party A value is provided.

CEL (Channel Event Logging)
------------------
 * The 'extra' field of all CEL events that use it now consists of a JSON blob
   with key/value pairs which are defined in the Asterisk 12 CEL documentation.

 * AST_CEL_BLINDTRANSFER events now report the transferee bridge unique
   identifier, extension, and context in a JSON blob as the extra string
   instead of the transferee channel name as the peer.

 * AST_CEL_ATTENDEDTRANSFER events now report the peer as NULL and additional
   information in the 'extra' string as a JSON blob. For transfers that occur
   between two bridged channels, the 'extra' JSON blob contains the primary
   bridge unique identifier, the secondary channel name, and the secondary